// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Regression > internal > filelist 1`] = `
"[
  "1.md",
  "_assets/1.png",
  "_assets/2.png",
  "_assets/3.png",
  "_assets/5_1.png",
  "_assets/empty.pdf",
  "autotitle.md",
  "generic/1.md",
  "generic/2.md",
  "generic/3.md",
  "generic/Sub notes/1.md",
  "generic/Sub notes/2.md",
  "images.md",
  "included-item.md",
  "includes.md",
  "includes/deep-hash.md",
  "includes/test-hash.md",
  "includes/user-hash.md",
  "index.yaml",
  "latex.md",
  "merge/merge.md",
  "merge/merged.md",
  "merge/toc.yaml",
  "mermaid.md",
  "openapi/index.md",
  "openapi/test-controller/getWithPayloadResponse.md",
  "openapi/test-controller/index.md",
  "redirects.yaml",
  "sub/folder/item-1.md",
  "toc.yaml"
]"
`;

exports[`Regression > internal > filelist 2`] = `
"[
  "1.html",
  "_assets/1.png",
  "_assets/2.png",
  "_assets/3.png",
  "_assets/5_1.png",
  "_assets/empty.pdf",
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "autotitle.html",
  "c.md",
  "generic/1.html",
  "generic/2.html",
  "generic/3.html",
  "generic/Sub notes/1.html",
  "generic/Sub notes/2.html",
  "images.html",
  "included-item.html",
  "includes.html",
  "index.html",
  "latex.html",
  "merge/merge.html",
  "merge/merged.html",
  "merge/toc.js",
  "mermaid.html",
  "openapi/index.html",
  "openapi/test-controller/getWithPayloadResponse.html",
  "openapi/test-controller/index.html",
  "sub/folder/item-1.html",
  "toc.js"
]"
`;

exports[`Regression > internal 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Title

Text not_var{{not-var}} not_var{{skip()}} default-var-value

Text \`not_var{{not-var}}\` \`not_var{{skip()}}\` \`default-var-value\`

Text
\`\`\`
not_var{{not-var}}

not_var{{skip()}}

default-var-value
\`\`\`


\`[not a link](./path/to/relative/file.md)\`

## Subtitle {#subtitle}

[{#T}](./mermaid.md)

[{#T}](./mermaid.md#info)

[](./latex.md)

[noext-link](./includes)

{% include [user](includes/user-hash.md) %}
"
`;

exports[`Regression > internal 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Autotitles

Empty title
[](./1.md)

Empty subtitle
[](./1.md#subtitle)

Special title
[{#T}](./1.md)

Special subtitle
[{#T}](./1.md#subtitle)

Empty local title
[](#header)

Special local title
[{#T}](#header)

## Header {#header}

Content
"
`;

exports[`Regression > internal 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Note 1

Note content 1
"
`;

exports[`Regression > internal 4`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Note 1

Note content 1
"
`;

exports[`Regression > internal 5`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
Note content 1
"
`;

exports[`Regression > internal 6`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Sub note 1

Note content 1
"
`;

exports[`Regression > internal 7`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Sub note 2

Note content 2
"
`;

exports[`Regression > internal 8`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Images

![simple image](_assets/1.png)

<!-- comment -->![with leading comment](_assets/2.png)

![with trailing comment](_assets/3.png)<!-- comment -->

<!-- ![commented](_assets/4.png) -->

![with backslash](_assets/5/_1.png)
"
`;

exports[`Regression > internal 9`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Included item

Included item text

<!-- :   {% include [rec-off](./commented-include.md) %} -->

{% note alert "Alert!" %}

  <!-- content -->

{% endnote %}

![pdf](_assets/empty.pdf)
"
`;

exports[`Regression > internal 10`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
Text

{% include [user](includes/user-hash.md) %}

{% include [test](includes/test-hash.md) %}

<!--{% include [For includes/deep.md](includes/deep.md) %}-->
{% include [For includes/deep-hash.md](includes/deep-hash.md) %}
"
`;

exports[`Regression > internal 11`] = `
"{% include [user](./user-hash.md) %}
"
`;

exports[`Regression > internal 12`] = `
"Test
"
`;

exports[`Regression > internal 13`] = `
"Bob
"
`;

exports[`Regression > internal 14`] = `
"description:
  - Some text
links:
  - name: Link 1
    href: ./1.md
  - name: Link 2
    href: ./1
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
"
`;

exports[`Regression > internal 15`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Latex usage

$/sqrt{3x-1}+(1+x)^2$
"
`;

exports[`Regression > internal 16`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Should use merged item

[merged](./merged.md)
"
`;

exports[`Regression > internal 17`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Merged item

Should be linked in toc.yaml
"
`;

exports[`Regression > internal 18`] = `
"items:
  - name: Use merged
    href: merge.md
  - name: Merged item
    href: merged.md
path: merge/toc.yaml
"
`;

exports[`Regression > internal 19`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Mermaid usage

\`\`\`mermaid

  sequenceDiagram
        rect rgba(251, 243, 232, 0.2)
            Alice ->> Bob:
        end
  \`\`\`

## Mermaid info {#info}

Some mermaid info
"
`;

exports[`Regression > internal 20`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# OpenAPI definition

##version: v0##

## Sections

- [test-controller](test-controller/index.md)


## Specification

{% cut "Open API" %}


\`\`\`text translate=no
{
    "openapi": "3.0.1",
    "info": {
        "title": "OpenAPI definition",
        "version": "v0"
    },
    "servers": [
        {
            "url": "http://localhost:8080",
            "description": "Generated server url"
        }
    ],
    "paths": {
        "/test": {
            "get": {
                "tags": [
                    "test-controller"
                ],
                "summary": "Simple get operation. тест новой верстки 3",
                "description": "Defines a simple get operation with no inputs and a complex",
                "operationId": "getWithPayloadResponse",
                "responses": {
                    "200": {
                        "description": "200!!!!",
                        "content": {
                            "application/json": {
                                "schema": {
                                    "type": "object",
                                    "properties": {
                                        "A": {
                                            "type": "string"
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    },
    "components": {
        "schemas": {
            "RecurceTop": {
                "type": "object",
                "properties": {
                    "A": {
                        "type": "string"
                    }
                }
            },
            "RecurceMiddle": {
                "type": "object",
                "properties": {
                    "B": {
                        "type": "array",
                        "items": {
                            "type": "object",
                            "properties": {
                                "A": {
                                    "type": "string"
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
\`\`\`


{% endcut %}

<!-- markdownlint-disable-file -->"
`;

exports[`Regression > internal 21`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
<div class="openapi">

# Simple get operation. тест новой верстки 3

Defines a simple get operation with no inputs and a complex

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-get);margin-bottom: 12px">

<div class="openapi__request">

GET {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

200!!!!

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "A": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 A {.openapi-table-parameter-name} 
|
 **Type:** string 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Regression > internal 22`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# test-controller

## Endpoints

- [Simple get operation. тест новой верстки 3](getWithPayloadResponse.md)

<!-- markdownlint-disable-file -->"
`;

exports[`Regression > internal 23`] = `
"files:
  - from: c.md
    to: d.md
common:
  - from: ./a.md
    to: ./b.md
"
`;

exports[`Regression > internal 24`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Item 1

Item 1 text

[{#T}](../../images.md)
"
`;

exports[`Regression > internal 25`] = `
"items:
  - name: Verbose root (index.yaml) will be transformed to index.html
    href: index.yaml
  - name: Root will be transformed to index.html
    href: /index.yaml
  - name: Md item with not_var syntax
    href: 1.md
  - name: Md item named without extension
    href: 1.md
  - name: Item with empty href
  - name: Included Item
    href: included-item.md
  - name: Named include (items is Object here - this is not an error)
    items:
      - name: Item 1
        href: sub/folder/item-1.md
  - href: mermaid.md
    name: Mermaid usage
  - name: Latex usage
    href: latex.md
  - name: Images
    href: images.md
  - name: Autotitle
    href: autotitle.md
  - name: includes
    href: includes.md
  - name: generic
    items:
      - name: Note 1
        href: generic/1.md
      - name: Note 1
        href: generic/2.md
      - name: '3'
        href: generic/3.md
      - name: Sub notes
        items:
          - name: Sub note 1
            href: generic/Sub notes/1.md
          - name: Sub note 2
            href: generic/Sub notes/2.md
  - name: openapi
    items:
      - name: Overview
        href: openapi/index.md
      - name: test-controller
        items:
          - name: Overview
            href: openapi/test-controller/index.md
          - href: openapi/test-controller/getWithPayloadResponse.md
            name: Simple get operation. тест новой верстки 3
path: toc.yaml
"
`;

exports[`Regression > internal 26`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Title</title>
        <meta name="description" content="Text {{not-var}} {{skip()}} default-var-value">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Text {{not-var}} {{skip()}} default-var-value&lt;/p&gt;/n&lt;p&gt;Text &lt;code&gt;{{not-var}}&lt;/code&gt; &lt;code&gt;{{skip()}}&lt;/code&gt; &lt;code&gt;default-var-value&lt;/code&gt;&lt;/p&gt;/n&lt;p&gt;Text&lt;/p&gt;/n/n    &lt;div class=\\"yfm-clipboard\\"&gt;/n        &lt;pre&gt;&lt;code class=\\"hljs\\"&gt;{{not-var}}/n/n{{skip()}}/n/ndefault-var-value/n&lt;/code&gt;&lt;/pre&gt;/n/n        &lt;button class=\\"yfm-clipboard-button\\"&gt;/n            &lt;svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"9\\"&gt;/n                &lt;path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\"&gt;&lt;/path&gt;/n                &lt;path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\"&gt;/n                    &lt;animate id=\\"visibileAnimation-9\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin&gt;&lt;/animate&gt;/n                    &lt;animate id=\\"hideAnimation-9\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-9.end+1\\" fill=\\"freeze\\"&gt;&lt;/animate&gt;/n                &lt;/path&gt;/n            &lt;/svg&gt;/n        &lt;/button&gt;/n    &lt;/div&gt;/n&lt;p&gt;&lt;code&gt;[not a link](./path/to/relative/file.md)&lt;/code&gt;&lt;/p&gt;/n&lt;h2 id=\\"subtitle\\"&gt;&lt;a href=\\"1.html#subtitle\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Subtitle&lt;/span&gt;&lt;/a&gt;Subtitle&lt;/h2&gt;/n&lt;p&gt;&lt;a href=\\"mermaid.html\\"&gt;Mermaid usage&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"mermaid.html#info\\"&gt;Mermaid info&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"latex.html\\"&gt;Latex usage&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"includes\\"&gt;noext-link&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Bob&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Text {{not-var}} {{skip()}} default-var-value"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[{"title":"Subtitle","href":"1.html#subtitle","level":2}],"title":"Title"},"router":{"pathname":"1","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 27`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Autotitles</title>
        <meta name="description" content="Empty title
        Title">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Empty title&lt;br /&gt;/n&lt;a href=\\"1.html\\"&gt;Title&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Empty subtitle&lt;br /&gt;/n&lt;a href=\\"1.html#subtitle\\"&gt;Subtitle&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Special title&lt;br /&gt;/n&lt;a href=\\"1.html\\"&gt;Title&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Special subtitle&lt;br /&gt;/n&lt;a href=\\"1.html#subtitle\\"&gt;Subtitle&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Empty local title&lt;br /&gt;/n&lt;a href=\\"autotitle.html#header\\"&gt;Header&lt;/a&gt;&lt;/p&gt;/n&lt;p&gt;Special local title&lt;br /&gt;/n&lt;a href=\\"autotitle.html#header\\"&gt;Header&lt;/a&gt;&lt;/p&gt;/n&lt;h2 id=\\"header\\"&gt;&lt;a href=\\"autotitle.html#header\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Header&lt;/span&gt;&lt;/a&gt;Header&lt;/h2&gt;/n&lt;p&gt;Content&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Empty title/nTitle"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[{"title":"Header","href":"autotitle.html#header","level":2}],"title":"Autotitles"},"router":{"pathname":"autotitle","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 28`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Redirect to d.md</title>
        <meta http-equiv="refresh" content="0; url=d.md">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        <script type="application/javascript">
            window.location.replace("d.md");
        </script>
        
    </head>
    <body class="g-root g-root_theme_light">
        If you are not redirected automatically, follow this <a href="d.md">link</a>.
        
        
        
    </body>
</html>"
`;

exports[`Regression > internal 29`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Note 1</title>
        <meta name="description" content="Note content 1">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Note content 1&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Note content 1"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Note 1"},"router":{"pathname":"generic/1","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 30`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Note 1</title>
        <meta name="description" content="Note content 1">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Note content 1&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Note content 1"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Note 1"},"router":{"pathname":"generic/2","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 31`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title></title>
        <meta name="description" content="Note content 1">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Note content 1&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Note content 1"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":""},"router":{"pathname":"generic/3","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 32`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Sub note 1</title>
        <meta name="description" content="Note content 1">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Note content 1&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Note content 1"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Sub note 1"},"router":{"pathname":"generic/Sub notes/1","depth":3,"base":"../../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 33`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Sub note 2</title>
        <meta name="description" content="Note content 2">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Note content 2&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Note content 2"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Sub note 2"},"router":{"pathname":"generic/Sub notes/2","depth":3,"base":"../../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 34`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Images</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;img src=\\"_assets/1.png\\" alt=\\"simple image\\" /&gt;&lt;/p&gt;/n![with leading comment](_assets/2.png)/n&lt;p&gt;&lt;img src=\\"_assets/3.png\\" alt=\\"with trailing comment\\" /&gt;&lt;/p&gt;/n/n&lt;p&gt;&lt;img src=\\"_assets/5_1.png\\" alt=\\"with backslash\\" /&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Images"},"router":{"pathname":"images","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 35`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Included item</title>
        <meta name="description" content="Included item text">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Included item text&lt;/p&gt;/n/n&lt;div class=\\"yfm-note yfm-accent-alert\\" note-type=\\"alert\\"&gt;&lt;p class=\\"yfm-note-title\\"&gt;Alert!&lt;/p&gt;/n&lt;div class=\\"yfm-note-content\\"&gt;  /n&lt;/div&gt;&lt;/div&gt;&lt;p&gt;&lt;img src=\\"_assets/empty.pdf\\" alt=\\"pdf\\" /&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Included item text"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Included item"},"router":{"pathname":"included-item","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 36`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title></title>
        <meta name="description" content="Text">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Text&lt;/p&gt;/n&lt;p&gt;Bob&lt;/p&gt;/n&lt;p&gt;Test&lt;/p&gt;/n/n&lt;p&gt;Bob&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Text"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":""},"router":{"pathname":"includes","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 37`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title></title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"description":["Some text"],"links":[{"name":"Link 1","href":"1.html"},{"name":"Link 2","href":"1/index.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"title":""},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 38`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Latex usage</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/latex-extension.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;span class=\\"yfm-latex\\" data-content=\\"%5Csqrt%7B3x-1%7D%2B(1%2Bx)%5E2\\" data-options=\\"%7B%22displayMode%22%3Afalse%7D\\"&gt;&lt;/span&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_bundle/latex-extension.css"],"script":["_bundle/latex-extension.js"]},"headings":[],"title":"Latex usage"},"router":{"pathname":"latex","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_bundle/latex-extension.js"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 39`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Should use merged item</title>
        <meta name="description" content="merged">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;a href=\\"merge/merged.html\\"&gt;merged&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"merged"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Should use merged item"},"router":{"pathname":"merge/merge","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="merge/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 40`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Merged item</title>
        <meta name="description" content="Should be linked in toc.yaml">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Should be linked in toc.yaml&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Should be linked in toc.yaml"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Merged item"},"router":{"pathname":"merge/merged","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="merge/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 41`] = `"window.__DATA__.data.toc = {"items":[{"name":"Use merged","href":"merge/merge.html","id":"UUID"},{"name":"Merged item","href":"merge/merged.html","id":"UUID"}],"path":"merge/toc.yaml","id":"UUID"};"`;

exports[`Regression > internal 42`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Mermaid usage</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;div class=\\"mermaid\\" data-content=\\"sequenceDiagram%0A%20%20%20%20%20%20%20%20rect%20rgba(251%2C%20243%2C%20232%2C%200.2)%0A%20%20%20%20%20%20%20%20%20%20%20%20Alice%20-%3E%3E%20Bob%3A%0A%20%20%20%20%20%20%20%20end%0A\\"&gt;&lt;/div&gt;&lt;h2 id=\\"info\\"&gt;&lt;a href=\\"mermaid.html#info\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Mermaid info&lt;/span&gt;&lt;/a&gt;Mermaid info&lt;/h2&gt;/n&lt;p&gt;Some mermaid info&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"script":["_bundle/mermaid-extension.js"]},"headings":[{"title":"Mermaid info","href":"mermaid.html#info","level":2}],"title":"Mermaid usage"},"router":{"pathname":"mermaid","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_bundle/mermaid-extension.js"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 43`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>OpenAPI definition</title>
        <meta name="description" content="version: v0">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/cut-extension.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;samp&gt;version: v0&lt;/samp&gt;&lt;/p&gt;/n&lt;h2 id=\\"sections\\"&gt;&lt;a href=\\"openapi/index.html#sections\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Sections&lt;/span&gt;&lt;/a&gt;Sections&lt;/h2&gt;/n&lt;ul&gt;/n&lt;li&gt;&lt;a href=\\"openapi/test-controller/index.html\\"&gt;test-controller&lt;/a&gt;&lt;/li&gt;/n&lt;/ul&gt;/n&lt;h2 id=\\"specification\\"&gt;&lt;a href=\\"openapi/index.html#specification\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Specification&lt;/span&gt;&lt;/a&gt;Specification&lt;/h2&gt;/n&lt;details class=\\"yfm-cut\\"&gt;&lt;summary class=\\"yfm-cut-title\\"&gt;Open API&lt;/summary&gt;&lt;div class=\\"yfm-cut-content\\"&gt;/n    &lt;div class=\\"yfm-clipboard\\"&gt;/n        &lt;pre&gt;&lt;code class=\\"hljs text\\"&gt;{/n    \\"openapi\\": \\"3.0.1\\",/n    \\"info\\": {/n        \\"title\\": \\"OpenAPI definition\\",/n        \\"version\\": \\"v0\\"/n    },/n    \\"servers\\": [/n        {/n            \\"url\\": \\"http://localhost:8080\\",/n            \\"description\\": \\"Generated server url\\"/n        }/n    ],/n    \\"paths\\": {/n        \\"/test\\": {/n            \\"get\\": {/n                \\"tags\\": [/n                    \\"test-controller\\"/n                ],/n                \\"summary\\": \\"Simple get operation. тест новой верстки 3\\",/n                \\"description\\": \\"Defines a simple get operation with no inputs and a complex\\",/n                \\"operationId\\": \\"getWithPayloadResponse\\",/n                \\"responses\\": {/n                    \\"200\\": {/n                        \\"description\\": \\"200!!!!\\",/n                        \\"content\\": {/n                            \\"application/json\\": {/n                                \\"schema\\": {/n                                    \\"type\\": \\"object\\",/n                                    \\"properties\\": {/n                                        \\"A\\": {/n                                            \\"type\\": \\"string\\"/n                                        }/n                                    }/n                                }/n                            }/n                        }/n                    }/n                }/n            }/n        }/n    },/n    \\"components\\": {/n        \\"schemas\\": {/n            \\"RecurceTop\\": {/n                \\"type\\": \\"object\\",/n                \\"properties\\": {/n                    \\"A\\": {/n                        \\"type\\": \\"string\\"/n                    }/n                }/n            },/n            \\"RecurceMiddle\\": {/n                \\"type\\": \\"object\\",/n                \\"properties\\": {/n                    \\"B\\": {/n                        \\"type\\": \\"array\\",/n                        \\"items\\": {/n                            \\"type\\": \\"object\\",/n                            \\"properties\\": {/n                                \\"A\\": {/n                                    \\"type\\": \\"string\\"/n                                }/n                            }/n                        }/n                    }/n                }/n            }/n        }/n    }/n}/n&lt;/code&gt;&lt;/pre&gt;/n/n        &lt;button class=\\"yfm-clipboard-button\\"&gt;/n            &lt;svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"21\\"&gt;/n                &lt;path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\"&gt;&lt;/path&gt;/n                &lt;path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\"&gt;/n                    &lt;animate id=\\"visibileAnimation-21\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin&gt;&lt;/animate&gt;/n                    &lt;animate id=\\"hideAnimation-21\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-21.end+1\\" fill=\\"freeze\\"&gt;&lt;/animate&gt;/n                &lt;/path&gt;/n            &lt;/svg&gt;/n        &lt;/button&gt;/n    &lt;/div&gt;/n&lt;/div&gt;&lt;/details&gt;","meta":{"metadata":[{"name":"description","content":"version: v0"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/cut-extension.css"],"script":["_assets/cut-extension.js"]},"headings":[{"title":"Sections","href":"openapi/index.html#sections","level":2},{"title":"Specification","href":"openapi/index.html#specification","level":2}],"title":"OpenAPI definition"},"router":{"pathname":"openapi/index","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/cut-extension.js"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 44`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title></title>
        <meta name="description" content="Simple get operation. тест новой верстки 3">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/cut-extension.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;div class=\\"openapi\\"&gt;/n&lt;h1&gt;Simple get operation. тест новой верстки 3&lt;/h1&gt;/n&lt;p&gt;Defines a simple get operation with no inputs and a complex&lt;/p&gt;/n&lt;h2 id=\\"request\\"&gt;&lt;a href=\\"openapi/test-controller/getWithPayloadResponse.html#request\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Request&lt;/span&gt;&lt;/a&gt;Request&lt;/h2&gt;/n&lt;div class=\\"openapi__requests\\"&gt;/n&lt;div class=\\"openapi__request__wrapper\\" style=\\"--method:var(--dc-openapi-methods-get);margin-bottom:12px\\"&gt;/n&lt;div class=\\"openapi__request\\"&gt;/n&lt;p class=\\"openapi__method\\"&gt;GET&lt;/p&gt;/n/n    &lt;div class=\\"yfm-clipboard\\"&gt;/n        &lt;pre&gt;&lt;code class=\\"hljs text\\"&gt;http://localhost:8080/test/n&lt;/code&gt;&lt;/pre&gt;/n/n        &lt;button class=\\"yfm-clipboard-button\\"&gt;/n            &lt;svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"16\\"&gt;/n                &lt;path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\"&gt;&lt;/path&gt;/n                &lt;path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\"&gt;/n                    &lt;animate id=\\"visibileAnimation-16\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin&gt;&lt;/animate&gt;/n                    &lt;animate id=\\"hideAnimation-16\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-16.end+1\\" fill=\\"freeze\\"&gt;&lt;/animate&gt;/n                &lt;/path&gt;/n            &lt;/svg&gt;/n        &lt;/button&gt;/n    &lt;/div&gt;/n&lt;/div&gt;/n&lt;p&gt;Generated server url&lt;/p&gt;/n&lt;/div&gt;/n&lt;/div&gt;/n&lt;h2 id=\\"responses\\"&gt;&lt;a href=\\"openapi/test-controller/getWithPayloadResponse.html#responses\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Responses&lt;/span&gt;&lt;/a&gt;Responses&lt;/h2&gt;/n&lt;div class=\\"openapi__response__code__200\\"&gt;/n&lt;h2 id=\\"200-ok\\"&gt;&lt;a href=\\"openapi/test-controller/getWithPayloadResponse.html#200-ok\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;200 OK&lt;/span&gt;&lt;/a&gt;200 OK&lt;/h2&gt;/n&lt;p&gt;200!!!!&lt;/p&gt;/n&lt;div class=\\"openapi-entity\\"&gt;/n&lt;h3 id=\\"body\\"&gt;&lt;a href=\\"openapi/test-controller/getWithPayloadResponse.html#body\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Body&lt;/span&gt;&lt;/a&gt;Body&lt;/h3&gt;/n&lt;details class=\\"yfm-cut\\"&gt;&lt;summary class=\\"yfm-cut-title\\"&gt;application/json&lt;/summary&gt;&lt;div class=\\"yfm-cut-content\\"&gt;/n    &lt;div class=\\"yfm-clipboard\\"&gt;/n        &lt;pre&gt;&lt;code class=\\"hljs json\\"&gt;&lt;span class=\\"hljs-punctuation\\"&gt;{&lt;/span&gt;/n    &lt;span class=\\"hljs-attr\\"&gt;\\"A\\"&lt;/span&gt;&lt;span class=\\"hljs-punctuation\\"&gt;:&lt;/span&gt; &lt;span class=\\"hljs-string\\"&gt;\\"string\\"&lt;/span&gt;/n&lt;span class=\\"hljs-punctuation\\"&gt;}&lt;/span&gt;/n&lt;/code&gt;&lt;/pre&gt;/n/n        &lt;button class=\\"yfm-clipboard-button\\"&gt;/n            &lt;svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"42\\"&gt;/n                &lt;path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\"&gt;&lt;/path&gt;/n                &lt;path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\"&gt;/n                    &lt;animate id=\\"visibileAnimation-42\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin&gt;&lt;/animate&gt;/n                    &lt;animate id=\\"hideAnimation-42\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-42.end+1\\" fill=\\"freeze\\"&gt;&lt;/animate&gt;/n                &lt;/path&gt;/n            &lt;/svg&gt;/n        &lt;/button&gt;/n    &lt;/div&gt;/n&lt;/div&gt;&lt;/details&gt;&lt;table&gt;/n&lt;tbody&gt;/n&lt;tr&gt;/n&lt;td&gt;/n&lt;p&gt;&lt;strong&gt;Name&lt;/strong&gt;&lt;/p&gt;/n&lt;/td&gt;/n&lt;td&gt;/n&lt;p&gt;&lt;strong&gt;Description&lt;/strong&gt;&lt;/p&gt;/n&lt;/td&gt;/n&lt;/tr&gt;/n&lt;tr&gt;/n&lt;td class=\\"openapi-table-parameter-name\\"&gt;/n&lt;p&gt;A&lt;/p&gt;/n&lt;/td&gt;/n&lt;td&gt;/n&lt;p&gt;&lt;strong&gt;Type:&lt;/strong&gt; string&lt;/p&gt;/n&lt;/td&gt;/n&lt;/tr&gt;/n&lt;/tbody&gt;/n&lt;/table&gt;/n&lt;/div&gt;/n&lt;/div&gt;/n/n&lt;/div&gt;/n&lt;dfn class=\\"yfm yfm-term_dfn\\" id=\\":Deprecated_element\\" role=\\"dialog\\"&gt;&lt;p&gt;No longer supported, please use an alternative and newer version.&lt;/p&gt;/n&lt;/dfn&gt;","meta":{"metadata":[{"name":"description","content":"Simple get operation. тест новой верстки 3"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/cut-extension.css"],"script":["_assets/cut-extension.js"]},"headings":[{"title":"Request","href":"openapi/test-controller/getWithPayloadResponse.html#request","level":2},{"title":"Responses","href":"openapi/test-controller/getWithPayloadResponse.html#responses","level":2},{"title":"200 OK","href":"openapi/test-controller/getWithPayloadResponse.html#200-ok","level":2,"items":[{"title":"Body","href":"openapi/test-controller/getWithPayloadResponse.html#body","level":3}]}],"title":""},"router":{"pathname":"openapi/test-controller/getWithPayloadResponse","depth":3,"base":"../../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/cut-extension.js"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 45`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>test-controller</title>
        <meta name="description" content="Endpoints">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;h2 id=\\"endpoints\\"&gt;&lt;a href=\\"openapi/test-controller/index.html#endpoints\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;Endpoints&lt;/span&gt;&lt;/a&gt;Endpoints&lt;/h2&gt;/n&lt;ul&gt;/n&lt;li&gt;&lt;a href=\\"openapi/test-controller/getWithPayloadResponse.html\\"&gt;Simple get operation. тест новой верстки 3&lt;/a&gt;&lt;/li&gt;/n&lt;/ul&gt;/n","meta":{"metadata":[{"name":"description","content":"Endpoints"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[{"title":"Endpoints","href":"openapi/test-controller/index.html#endpoints","level":2}],"title":"test-controller"},"router":{"pathname":"openapi/test-controller/index","depth":3,"base":"../../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 46`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Item 1</title>
        <meta name="description" content="Item 1 text">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Item 1 text&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"images.html\\"&gt;Images&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Item 1 text"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":"Item 1"},"router":{"pathname":"sub/folder/item-1","depth":3,"base":"../../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Regression > internal 47`] = `"window.__DATA__.data.toc = {"items":[{"name":"Verbose root (index.yaml) will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Root will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Md item with not_var syntax","href":"1.html","id":"UUID"},{"name":"Md item named without extension","href":"1.html","id":"UUID"},{"name":"Item with empty href","id":"UUID"},{"name":"Included Item","href":"included-item.html","id":"UUID"},{"name":"Named include (items is Object here - this is not an error)","items":[{"name":"Item 1","href":"sub/folder/item-1.html","id":"UUID"}],"id":"UUID"},{"href":"mermaid.html","name":"Mermaid usage","id":"UUID"},{"name":"Latex usage","href":"latex.html","id":"UUID"},{"name":"Images","href":"images.html","id":"UUID"},{"name":"Autotitle","href":"autotitle.html","id":"UUID"},{"name":"includes","href":"includes.html","id":"UUID"},{"name":"generic","items":[{"name":"Note 1","href":"generic/1.html","id":"UUID"},{"name":"Note 1","href":"generic/2.html","id":"UUID"},{"name":"3","href":"generic/3.html","id":"UUID"},{"name":"Sub notes","items":[{"name":"Sub note 1","href":"generic/Sub notes/1.html","id":"UUID"},{"name":"Sub note 2","href":"generic/Sub notes/2.html","id":"UUID"}],"id":"UUID"}],"id":"UUID"},{"name":"openapi","items":[{"name":"Overview","href":"openapi/index.html","id":"UUID"},{"name":"test-controller","items":[{"name":"Overview","href":"openapi/test-controller/index.html","id":"UUID"},{"href":"openapi/test-controller/getWithPayloadResponse.html","name":"Simple get operation. тест новой верстки 3","id":"UUID"}],"id":"UUID"}],"id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;
